@@ -4,7 +4,7 @@ if @account.valid?
   page.visual_effect :toggle_blind, :create_account, :duration => 0.3, :afterFinish => 'function(effect) {effect.element.update("")}'
   page.insert_html :top, :accounts, :partial => "account", :collection => [ @account ]
   page[dom_id(@account)].visual_effect :highlight, :duration => 1.5
-  page << refresh_sidebar
+  page << refresh_sidebar(:index)
   page[:paginate].replace_html render(:partial => "common/paginate")
   page.call "crm.flick", :empty, :remove
 else
