@@ -2,11 +2,12 @@ id = dom_id(@account)
 if @account.errors.empty?
   if called_from_landing_page?
     page.call "crm.flip_form", :edit_account, @account.name
+    page << refresh_sidebar(:show, :summary)
   else
     page[id].replace :partial => "account", :collection => [ @account ]
     page[id].visual_effect :highlight, :duration => 1.0
+    page << refresh_sidebar(:index)
   end
-  page << refresh_sidebar(:index)
 else  
   page[id].replace_html :partial => "edit"
   page[id].visual_effect :shake, :duration => 0.25, :distance => 6
